--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
+        android:name=".TitipinApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -10,11 +12,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TitipIn" >
+        android:theme="@style/Theme.TitipIn">
         <activity
-            android:name=".ui.screens.SplashScreen"
+            android:name=".ui.screens.LoginActivity"
             android:exported="true"
-            android:label="@string/title_activity_splash_screen"
+            android:label="@string/title_activity_login"
             android:theme="@style/Theme.TitipIn" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,10 +25,20 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".ui.screens.RegisterActivity"
+            android:exported="false"
+            android:label="@string/title_activity_register"
+            android:theme="@style/Theme.TitipIn" />
+        <activity
+            android:name=".ui.screens.SplashScreen"
+            android:exported="true"
+            android:label="@string/title_activity_splash_screen"
+            android:theme="@style/Theme.TitipIn" />
+        <activity
             android:name=".ui.screens.MainActivity"
             android:exported="false"
             android:label="@string/app_name"
-            android:theme="@style/Theme.TitipIn" >
+            android:theme="@style/Theme.TitipIn">
 
         </activity>
     </application>
