--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
+        android:name=".TitipinApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -10,12 +15,42 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TitipIn" >
+        android:theme="@style/Theme.TitipIn">
         <activity
-            android:name=".ui.screens.SplashScreen"
+            android:name=".ui.buy.TitipanDetailActivity"
+            android:exported="false"
+            android:label="@string/title_activity_titipan_detail"
+            android:theme="@style/Theme.TitipIn" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyB-5QWpMgAcw2lD48doNsSB0u1SIjb5FmY" />
+
+        <activity
+            android:name=".ui.session.SessionActivity"
+            android:exported="false"
+            android:label="@string/title_activity_session"
+            android:theme="@style/Theme.TitipIn" />
+        <activity
+            android:name=".ui.circle.CircleDetailActivity"
+            android:exported="false"
+            android:label="@string/title_activity_circle_detail"
+            android:theme="@style/Theme.TitipIn" />
+        <activity
+            android:name=".ui.circle.CircleActivity"
+            android:exported="false"
+            android:label="@string/title_activity_circle"
+            android:theme="@style/Theme.TitipIn" />
+        <activity
+            android:name=".ui.circle.AddCircleActivity"
+            android:exported="false"
+            android:label="@string/title_activity_add_circle"
+            android:theme="@style/Theme.TitipIn" />
+        <activity
+            android:name=".ui.login.LoginActivity"
             android:exported="true"
-            android:label="@string/title_activity_splash_screen"
-            android:theme="@style/Theme.TitipIn" >
+            android:label="@string/title_activity_login"
+            android:theme="@style/Theme.TitipIn">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,12 +58,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.screens.MainActivity"
+            android:name=".ui.register.RegisterActivity"
+            android:exported="false"
+            android:label="@string/title_activity_register"
+            android:theme="@style/Theme.TitipIn" />
+        <activity
+            android:name=".ui.screens.SplashScreen"
+            android:exported="true"
+            android:label="@string/title_activity_splash_screen"
+            android:theme="@style/Theme.TitipIn" />
+        <activity
+            android:name=".ui.home.MainActivity"
             android:exported="false"
             android:label="@string/app_name"
-            android:theme="@style/Theme.TitipIn" >
-
-        </activity>
+            android:theme="@style/Theme.TitipIn" />
     </application>
 
 </manifest>
