Implement payment features, revision mode, and revamp Home UI
- Integrate Midtrans SDK and Retrofit for payment processing and networking.
- Implement bank account management in `ProfileScreen` and update `User` model with bank details.
- Add `PaymentStatusCard` in `ShoppingListScreen` with real-time payment status monitoring.
- Revamp `HomeScreen` to display active sessions, user's circles, and session history.
- Implement "Revision Mode" toggling logic in `TitipankuViewModel` and `AuthRepository`.
- Add auto-login check in `LoginViewModel` and `LoginActivity`.
- Update `AuthRepository` to support bank account updates and payment listeners.
- Register `PaymentActivity` in AndroidManifest.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,10 @@
             android:label="@string/title_activity_splash_screen"
             android:theme="@style/Theme.TitipIn" />
         <activity
+            android:name=".ui.payment.PaymentActivity"
+            android:exported="false"
+            android:theme="@style/Theme.TitipIn" />
+        <activity
             android:name=".ui.home.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
