--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,11 @@
 [versions]
 agp = "8.13.1"
+coilCompose = "2.7.0"
+converterGson = "3.0.0"
 credentials = "1.5.0"
 firebaseBom = "34.6.0"
 googleid = "1.1.1"
+gson = "2.13.2"
 hiltAndroid = "2.57.2"
 hiltCompiler = "2.57.2"
 hiltNavigationCompose = "1.3.0"
@@ -16,20 +19,29 @@ activityCompose = "1.11.0"
 composeBom = "2024.09.00"
 
 #Navigation
+loggingInterceptor = "5.3.2"
+mapsCompose = "6.12.2"
 navigationCompose = "2.9.5"
 firebaseFirestoreKtx = "25.1.4"
+okhttp = "5.3.2"
 playServicesAuth = "21.4.0"
 playServicesLocation = "21.3.0"
+playServicesMaps = "19.2.0"
+retrofit = "3.0.0"
+uikit = "2.0.0-SANDBOX"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-credentials = { module = "androidx.credentials:credentials", version.ref = "credentials" }
 androidx-credentials-play-services-auth = { module = "androidx.credentials:credentials-play-services-auth", version.ref = "credentials" }
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
+converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 firebase-auth = { module = "com.google.firebase:firebase-auth" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 googleid = { module = "com.google.android.libraries.identity.googleid:googleid", version.ref = "googleid" }
+gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hiltCompiler" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -49,10 +61,16 @@ androidx-compose-material3 = { group = "androidx.compose.material3", name = "mat
 #Icons
 compose-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended" }
 #Navigation
+logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
+maps-compose = { module = "com.google.maps.android:maps-compose", version.ref = "mapsCompose" }
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "playServicesAuth" }
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
+play-services-maps = { module = "com.google.android.gms:play-services-maps", version.ref = "playServicesMaps" }
+retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+uikit = { module = "com.midtrans:uikit", version.ref = "uikit" }
 
 
 [plugins]
