--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,25 +46,16 @@
             android:label="@string/title_activity_add_circle"
             android:theme="@style/Theme.TitipIn" />
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".ui.home.auth.login.LoginActivity"
             android:exported="true"
             android:label="@string/title_activity_login"
             android:theme="@style/Theme.TitipIn">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
-            android:name=".ui.register.RegisterActivity"
+            android:name=".ui.home.auth.register.RegisterActivity"
             android:exported="false"
             android:label="@string/title_activity_register"
-            android:theme="@style/Theme.TitipIn" />
-        <activity
-            android:name=".ui.screens.SplashScreen"
-            android:exported="true"
-            android:label="@string/title_activity_splash_screen"
             android:theme="@style/Theme.TitipIn" />
         <activity
             android:name=".ui.payment.PaymentActivity"
@@ -73,7 +64,14 @@
         <activity
             android:name=".ui.home.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.TitipIn" />
+            android:label="@string/app_name"
+            android:theme="@style/Theme.TitipIn" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
