--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.afsar.titipin">
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
+<!--    <queries>-->
+<!--        <package android:name="com.google.android.gms" />-->
+<!--        <package android:name="com.android.vending" />-->
+<!--    </queries>-->
     <application
         android:name=".TitipinApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_titipin"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_titipin"
         android:supportsRtl="true"
         android:theme="@style/Theme.TitipIn">
+
         <activity
             android:name=".ui.buy.TitipanDetailActivity"
             android:exported="false"
@@ -24,6 +29,22 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
+
+        <service
+        android:name=".data.service.MyFirebaseMessagingService"
+        android:exported="false">
+        <intent-filter>
+            <action android:name="com.google.firebase.MESSAGING_EVENT" />
+        </intent-filter>
+    </service>
+
+    <meta-data
+        android:name="com.google.firebase.messaging.default_notification_icon"
+        android:resource="@drawable/ic_launcher_foreground" />
+
+    <meta-data
+        android:name="com.google.firebase.messaging.default_notification_color"
+        android:resource="@color/text_dark_primary" />
 
         <activity
             android:name=".ui.session.SessionActivity"
@@ -35,6 +56,7 @@
             android:name=".ui.payment.PaymentActivity"
             android:exported="false"
             android:theme="@style/Theme.TitipIn" />
+
         <activity
             android:name=".ui.home.MainActivity"
             android:exported="true"
@@ -42,7 +64,6 @@
             android:theme="@style/Theme.TitipIn" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
