--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,7 +20,7 @@ composeBom = "2024.09.00"
 
 #Navigation
 loggingInterceptor = "5.3.2"
-mapsCompose = "6.12.2"
+mapsCompose = "7.0.0"
 navigationCompose = "2.9.5"
 firebaseFirestoreKtx = "25.1.4"
 okhttp = "5.3.2"
@@ -29,6 +29,7 @@ playServicesLocation = "21.3.0"
 playServicesMaps = "19.2.0"
 retrofit = "3.0.0"
 uikit = "2.0.0-SANDBOX"
+firebaseMessagingKtx = "24.1.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -71,6 +72,7 @@ play-services-location = { group = "com.google.android.gms", name = "play-servic
 play-services-maps = { module = "com.google.android.gms:play-services-maps", version.ref = "playServicesMaps" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 uikit = { module = "com.midtrans:uikit", version.ref = "uikit" }
+firebase-messaging-ktx = { group = "com.google.firebase", name = "firebase-messaging-ktx", version.ref = "firebaseMessagingKtx" }
 
 
 [plugins]
